# BLOCKCHAINOTP

./: .env.example  .gitignore  AGENTS.md  ALGORITHM_ENHANCEMENTS_SUMMARY.md  BLOCKCHAIN_MCP_IMPLEMENTATION.md  CLAUDE_DESKTOP_CONFIG.md  Cargo.toml  DEPLOYMENT-GUIDE.md  INSTRUCTION-ETHEREUM-NETWORK.MD  INSTRUCTION-RUN-PROJECT.MD  MCP_SERVER.md  Makefile  Master-List-Json-Usage-InWeb3.md  NEXT-IMPLEMENT.MD  PROJECT_SUMMARY.md  README.md  SECURITY_ENHANCEMENTS.md  SECURITY_ENHANCEMENTS_SUMMARY.md  SECURITY_LAYERS.md  TESTING_GUIDE.md  algorithm-otp.md  build.bat  build.sh  codeChange.md  connection.md  cors_debug.html  cors_test.html  deploy-test-real-world.md  deploy_ethereum.js  deploy_solana.js  deployment_guide.md  extend-coverage-smart-contract.md  final_summary.md  frontend_structure.md  gitCommit.md  hardening.md  hardhat.config.js  input_security_layers_master.csv  install_and_run_frontend.sh  install_nodejs_wsl.sh  (+35 more)
config/: deployments.toml
contracts/: .gitignore  OtpVerifier.sol  README.md  foundry.toml
crates/otp-contract/: Cargo.toml
crates/otp-contract/src/: lib.rs
frontend/: Cargo.toml  README.md  Trunk.toml  build-wasm.sh  index.html  metamask.js  metamask_test.html  solana.js  styles.css  test_metamask.html  wallet_test.html
frontend/src/: lib.rs
frontend/src/components/: header.rs  mod.rs  otp_request_form.rs  otp_verify_form.rs  status_display.rs  wallet_connector.rs
frontend/src/models/: mod.rs
frontend/src/services/: mod.rs
frontend/src/utils/: mod.rs
mythril_env/: pyvenv.cfg
scripts/: admin_pause.sh  admin_rotate_admin.sh  admin_rotate_issuer.sh  deploy.js  deployment_info.py
src/: admin.rs  alerts.rs  anomaly_detection.rs  lib.rs  main.rs  mcp_handler.rs  mcp_server.rs
tests/: admin_endpoints.rs  otp_contract_integration.rs  otp_flow.rs  security_enhancements.rs
web3-full-stage/: assurance_api_alignment.csv  attack_layers_master.csv  defence_layers_master.csv  json-mastery-ultime.csv  json_test_taxonomy.csv  mcp-roles.md  mcp-testing.md  sengkeat-dex@outlook.com  small-blue-rpint.md  the 8 full stage cyber defense stack web3.md  web-total-test-cases.md  web3-1. architecture.md  web3-10. near protocol.md  (+11 more)
(+16 files in other folders)
