[package]
name = "blockchain-otp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
otp-core = { path = "crates/otp-core" }
otp-contract = { path = "crates/otp-contract" }

# Backend dependencies
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
redis = "0.23"
tower-http = { version = "0.4", features = ["cors"] }
zeroize = "1.3.0"

# WebAssembly dependencies for frontend
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.20"
yew-router = "0.17"
gloo-net = "0.2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"