[package]
name = "otp-contract"
version = "0.1.0"
edition = "2021"

[features]
default = ["evm"]
evm = ["dep:ethers"]
solana = [
    "dep:borsh",
    "dep:bs58",
    "dep:solana-client",
    "dep:solana-sdk",
    "dep:tokio",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", optional = true }
async-trait = "0.1"
thiserror = "1.0"
borsh = { version = "0.10", optional = true }
bs58 = { version = "0.5", optional = true }
solana-client = { version = "1.18.14", optional = true }
solana-sdk = { version = "1.18.14", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
